fix bug with empty text node, add new bug to basic.html

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -24,6 +24,10 @@
 
   <!-- Add all divs to be compared here two by two -->
 
+  <div class="32Z" data-test="2p" data-fisher="7gTAGB"><i><i data-id="yZm" class="W8nuT"><span class="R" data-test="6jFB"><b class="mHudJ"></b><b data-test="n9x">52K</b></span><b data-test="gBj" data-id="63vv"></b></i>J</i><i data-fisher="tNMbt" data-test="VhSee" class="yFJCis"><span data-id="jxc" data-fisher="mEBQ" class="As35"><i><p data-id="4m" data-test="V"><img></p><b data-test="ASKU" data-id="O3akk" class="p27s"></b>yYxD</i><b data-fisher="O" class="XjLs">w5</b>Z</span><img><span data-fisher="1H4z" data-test="Rzir"></span></i><img>I</div>
+  <div data-fisher="1NVn"><img><i><span data-fisher="lTtyKwl" class="Pf"><b data-id="i" data-test="C8h1" class="ucl"></b></span><b data-fisher="jFxhXH" data-test="RrZPMZ"><img>kwqvRK</b></i><b><span class="sAb3ap" data-fisher="wE"></span></b>WT</div>
+
+
   <div>lol<span>ydew<i>hey</i>de</span>
   </div>
   <div>lol
