make better comparisons

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -24,6 +24,9 @@
 
   <!-- Add all divs to be compared here two by two -->
 
+  <div data-id="Z" data-fisher="y"><span data-test="ucFbkr3a"><img><b data-fisher="Ex" class="rKV" data-test="vC"><i data-id="kqf"></i><img>X</b></span><b data-fisher="t8X"></b><p data-fisher="FH" data-id="rln">7X</p><i data-id="OWgQX9Q">VX7z0DtcEdy</i></div>
+  <div data-test="PZ" data-fisher="LQ1o" data-id="xqIO"><p><b></b><b data-test="3" data-id="7"></b><p data-test="PsA"></p><span>7IK</span></p><i data-test="xcou"><b class="aUZpbk0" data-test="DTje5"><p class="JM"></p><b class="rj3fVhnj" data-fisher="aVH4uL"></b>T18</b><i data-fisher="tZ" data-id="xUGn" class="Bq"><p class="lgX" data-id="OurCNj"><b data-test="NAP"></b><b data-fisher="fcs"></b></p>Y</i><img><b data-fisher="th" class="gB1R"><span data-test="9Z5">etcEnwQ</span>t2d</b><i data-fisher="kSu2g" data-id="I"><i data-id="EJZ"></i></i></i><p data-fisher="pe7Z" class="Asfl"></p></div>
+
   <div class="32Z" data-test="2p" data-fisher="7gTAGB"><i><i data-id="yZm" class="W8nuT"><span class="R" data-test="6jFB"><b class="mHudJ"></b><b data-test="n9x">52K</b></span><b data-test="gBj" data-id="63vv"></b></i>J</i><i data-fisher="tNMbt" data-test="VhSee" class="yFJCis"><span data-id="jxc" data-fisher="mEBQ" class="As35"><i><p data-id="4m" data-test="V"><img></p><b data-test="ASKU" data-id="O3akk" class="p27s"></b>yYxD</i><b data-fisher="O" class="XjLs">w5</b>Z</span><img><span data-fisher="1H4z" data-test="Rzir"></span></i><img>I</div>
   <div data-fisher="1NVn"><img><i><span data-fisher="lTtyKwl" class="Pf"><b data-id="i" data-test="C8h1" class="ucl"></b></span><b data-fisher="jFxhXH" data-test="RrZPMZ"><img>kwqvRK</b></i><b><span class="sAb3ap" data-fisher="wE"></span></b>WT</div>
 
