shrink div test in basic.html down to minimal (non)working example size, related to issue #29

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -24,8 +24,12 @@
 
   <!-- Add all divs to be compared here two by two -->
 
+  <div><p></p><p></p><img></div>
+  <div><img><p></p></div>
+
+
   <div><i></i><i><img></i><img>1</div>
-  <div><img><i></i><b></b>1</div> 
+  <div><img><i></i><b></b>1</div>
 
   <div>lol<span>ydew<i>hey</i>de</span>
   </div>
@@ -118,30 +122,6 @@
     <img>
     <p>Z</p>b
     <p></p>7f9</div>
-
-  <div>
-    <p></p>
-    <p><i></i>
-    </p>
-    <p></p><i><img><span><b></b></span><img></i>
-    <p></p><i><img><span></span></i>
-    <p><i></i>
-    </p>
-    <p></p>
-    <img><span><span></span></span>
-    <img>
-  </div>
-  <div>
-    <img><i></i>
-    <p><span><span><b></b></span></span>
-    </p>
-    <p></p><b><img><span></span></b>
-    <p><b></b>
-    </p>
-    <p></p>
-    <p></p>
-    <p>wg</p><i><p></p></i>2nJ<i><img></i>
-    <p></p><i><img></i>zV87J1UU3Ex</div>
 
   <div><span><b><p></p></b>pGy<p></p></span><span><span><span></span></span><i></i><i></i>
     </span><span></span>
