fix, and added new expanded error to basic.html, reopens #29

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -24,6 +24,9 @@
 
   <!-- Add all divs to be compared here two by two -->
 
+  <div class="Ty" data-fisher="EuH" data-id="KEx8lImUPo"><i><span class="BBzgyoJgL">ad</span><img><p></p></i><b class="qo"><p class="M8"><i data-test="4XpO" data-fisher="kWA" class="xlf"><i data-test="cU" class="RA"></i><b data-id="GC30U2" data-fisher="zifmz0">m1C9</b>rWj</i></p><img><b data-id="ButlA" data-fisher="a"></b>cmH</b><b class="9g"><b data-test="vtHBs" data-id="ng4P4P6f"></b></b><span class="TYQCE"><img></span>Nhsc</div>
+  <div class="JxU" data-id="LG2U" data-fisher="yTKw8Gw"><b data-id="UXjr"><p class="gGe"><span data-fisher="5" data-test="YnvzZl"><img><img><p class="2hcT" data-test="15AHBXG"></p><b data-fisher="1VK" data-id="NWHeR"><span data-fisher="9WN0"></span></b></span><p><i data-test="P9ks3z" data-id="h5QFx"><span class="ItR" data-id="11HG"></span><p data-test="Xg7Cg" data-fisher="qLbqO" data-id="KzITiB"><i data-fisher="0E"></i></p></i></p><b data-fisher="4ZR" data-test="HH" class="9OF"></b></p><b data-fisher="NbKiy"><span data-test="mY" data-id="Asam">O</span>ye54Xv</b>sm</b><span class="8Y2"><p data-test="xhIx" data-id="mK"><span data-test="DQ">ku</span><span></span>y4DRUXD3R527A</p>Dwt</span><b><img></b><img><b data-fisher="Y" class="c"><img></b><b data-id="WAsnfM" data-test="JMi"><img><p class="shnyjOnj"></p></b><i data-test="6quDX"><p class="snPTR" data-test="deO"><i data-id="mj" data-fisher="uSa148w"></i></p></i></div>
+
   <div><p></p><p></p><img></div>
   <div><img><p></p></div>
 
