remove attributes list from node if the last attribute has been removed, fixes latest issue in #29

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -24,8 +24,8 @@
 
   <!-- Add all divs to be compared here two by two -->
 
-  <div><i data-id="8" class="eb75t" data-fisher="moCU4"><p data-fisher="mhYlj" class="Mr" data-id="qzn"><p data-test="Emd" class="HZB"></p>PfoeB</p><span data-test="0NMRq" data-fisher="E">s5vU31D</span></i></div>
-  <div data-id="lymfwm" class="U498M"><i></i><span class="S7N" data-id="IrWSr" data-fisher="K0wK0ka"></span>5PpJI</div>
+  <div><i class="a"></i></div>
+  <div><i></i><span></span>b</div>
 
   <div><b></b><span></span><b class="a"></b></div>
   <div><b></b><span></span><b><img></b><b class="b"><img></b></div>
