add random unlimited test, to find more bugs, related to #29

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@ This project is licensed under the LGPL v. 3. For details see <a href="LICENSE.t
 
 <p>There is a <a href="tests/random.html">test of random elements</a>, one of <a href="tests/basic.html">basic elements</a>, one that <a href="tests/extent.html">tests the extents of diffs</a> to help generate the least number of changes, and of <a href="tests/form.html">form elements</a> that tended to throw errors in previous versions of this library.</p>
 
+<p>There is also a <a href="tests/random-unlimited.html">version of the random tests that reloads if no errors have been found</a>, mainly useful for finding errors.</p>
+
 <h2>Demo</h2>
 
 <p>Check out the <a href="demo/index.html">interactive demo</a>!</p>
