new minimum non-working example in basic.html, relates to #29

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -24,6 +24,9 @@
 
   <!-- Add all divs to be compared here two by two -->
 
+  <div><b>a</b><img><span></span><p>b</p></div>
+  <div><img><span></span><p></p><p class="a"><span class="a"><span></span></span>c</p><p class="a"><span class="a"></span></p></div>
+
   <div><i class="a"></i></div>
   <div><i></i><span></span>b</div>
 
