replace element objects need to be cloned incase that part of the structure is changes any further later on in which case the diff would be changed before it is given back to the user, fixes latest issue in basic.html, relates to #29

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -24,7 +24,13 @@
 
   <!-- Add all divs to be compared here two by two -->
 
+  <div><img><span></span><p></p><p class="a">b</p></div>
+  <div><img><span></span><p></p><p class="a"><span class="a"><span></span></span>c</p><p class="a"><span class="a"></span></p></div>
+
   <div><b>a</b><img><span></span><p>b</p></div>
+  <div><img><span></span><p></p><p class="a"><span class="a"><span></span></span>c</p><p class="a"><span class="a"></span></p></div>
+
+  <div><img><span></span><p></p><p class="a"><span class="a"><span></span></span>c</p><p class="a"><span class="a"><span></span</span></p></div>
   <div><img><span></span><p></p><p class="a"><span class="a"><span></span></span>c</p><p class="a"><span class="a"></span></p></div>
 
   <div><i class="a"></i></div>
