add new minimal example of divs that cannot be diffed, related to issue #29

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,6 +23,8 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
+  <div><b class="a" data-one="a"></b><b class="a"></b><img></div>
+  <div><img><b class="a"></b></div>
 
   <div><img><span></span><p></p><p class="a">b</p></div>
   <div><img><span></span><p></p><p class="a"><span class="a"><span></span></span>c</p><p class="a"><span class="a"></span></p></div>
