--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,6 +23,8 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
+  <div><span><b></b><img></span><img><span class="a"></span></div>
+  <div><i></i><p id="a"></p><p class="a"></p><img><span class="a"></span></div>
 
   <div><span></span><b class="a"></b><b class="a"><img></b></div>
   <div><b class="a"><img></b><b data-id="a" class="b"></b></div>
