--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,8 +23,8 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
-  <div><i><p></p><i></i>a</i><p></p><img></div>
-  <div><i><p></p></i><i><p class="a"></p>a</i><img></div>
+  <!--div><i><p></p><i></i>a</i><p></p><img></div>
+  <div><i><p></p></i><i><p class="a"></p>a</i><img></div-->
 
   <div><span><b></b><img></span><img><span class="a"></span></div>
   <div><i></i><p id="a"></p><p class="a"></p><img><span class="a"></span></div>
