--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,8 +23,17 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
-  <!--div><i><p></p><i></i>a</i><p></p><img></div>
-  <div><i><p></p></i><i><p class="a"></p>a</i><img></div-->
+  <!--div><img><img><i></i></div>
+  <div><i></i><img><img></div-->
+
+  <div><img><i></i><img></div>
+  <div><i></i><img><img></div>
+
+  <div class="TBXm2"><p data-id="KVMfZ" class="Isz"></p><b data-id="5c" class="3" data-fisher="7WKUUC5"></b></div>
+  <div data-fisher="qXQ" data-test="KD"><img><b data-id="tuKDPH6" data-test="mEHEJ0">OYVPhua9JA1ZE</b><b class="2pM" data-id="POh">b4Q</b>Qf61yc</div>
+
+  <div><i><p></p><i></i>a</i><p></p><img></div>
+  <div><i><p></p></i><i><p class="a"></p>a</i><img></div>
 
   <div><span><b></b><img></span><img><span class="a"></span></div>
   <div><i></i><p id="a"></p><p class="a"></p><img><span class="a"></span></div>
