--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,8 +23,11 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
-  <!--div><img><img><i></i></div>
-  <div><i></i><img><img></div-->
+  <div><img><img><i></i></div>
+  <div><i></i><img><img></div>
+
+  <div><span><b></b><img></span><img><span class="a"></span></div>
+  <div><i></i><p id="a"></p><p class="a"></p><img><span class="a"></span></div>
 
   <div><img><i></i><img></div>
   <div><i></i><img><img></div>
