better explanations and reordering of findInnerDiff

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,6 +23,9 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
+  <div><img><img><p></p><i></i><canvas></div>
+  <div><p></p><img><img><canvas></div>
+
   <div><img><img><i></i></div>
   <div><i></i><img><img></div>
 
