if multiple groups are found of the same large size, prioritize the last one to avoid recursion issues

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,11 +23,11 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
-  <!--div><img><p></p><i></i><img></div>
+  <div><img><p></p><i></i><img></div>
   <div><img><p>a</p><i></i><img><p></p></div>
 
   <div><p></p><i></i><img></div>
-  <div><img><p>a</p><i></i><img><p></p></div-->
+  <div><img><p>a</p><i></i><img><p></p></div>
 
   <div><img><img><p></p><i></i><canvas></div>
   <div><p></p><img><img><canvas></div>
