--- a/tests/site-integration.html
+++ b/tests/site-integration.html
@@ -229,7 +229,7 @@
       if(diff && this._VDOM){
         this._VDOM = this[0].cloneNode();
         //console.log(this._VDOM);
-        this._VDD = this._VDD || new window.diffDOM({valueDiffing: false,debug:true,diffcap:500});
+        this._VDD = this._VDD || new window.diffDOM({valueDiffing: false});
         this._VDOM.innerHTML = html;
         return applyDiff.call(this);
       }else{
