--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,6 +23,8 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
+
+
   <div><img><p></p><i></i><img></div>
   <div><img><p>a</p><i></i><img><p></p></div>
 
@@ -566,6 +568,12 @@
       objToNode(JSON.parse('{"nn":"DIV","a":[["id","document-editable"]],"c":[{"nn":"DIV","a":[["id","document-title"],["class","editable user-contents"],["title","The title of the document"],["contenteditable","true"]],"c":[{"t":"Hellofglalak"}]},{"nn":"DIV","a":[["id","document-metadata"],["class","user-contents"]]},{"nn":"DIV","a":[["id","document-contents"],["class","editable user-contents"],["contenteditable","true"]],"c":[{"nn":"P","c":[{"t":"I want a new Finisky is a German writer. Finish laundromats. French steel plants kate -- spiegel overrated. Howe"},{"t":" "},{"t":"ver, the essential parts are good Danish roses. And Swedish steel. Bitcoin Claustrophobic Visions (BCC). Aftenposten regner, bicycle. It\'s really easy to do.  University finals are a discipline of their own. Bortsch ist something I would like to eat during winter. fellxDAGBBloneHONEZDzow. And so thdededeey went to M"},{"nn":"SPAN","a":[["class","comment"],["id","comment-0"],["data-id","0"],["data-user","1"],["data-user-name","johannes"],["data-user-avatar","/static/img/default_avatar.png"],["data-date","1388568971084"],["data-comment","test"]],"c":[{"t":"unichmel"}]},{"t":"lom "},{"nn":"SPAN","a":[["class","citation"],["data-bib-entry","1"],["data-bib-before",""],["data-bib-page","123"],["data-bib-format","autocite"]]},{"t":" jfllfrjc"},{"nn":"SPAN","a":[["class","equation"],["data-equation","\\frac{2}{3}"]]},{"t":" aftfellowen"},{"nn":"SPAN","a":[["class","equation"],["data-equation","x=2*y"]]},{"t":" deAftend"},{"nn":"SPAN","a":[["class","equation"],["data-equation","x=2*y"]]},{"t":" etigeren"}]},{"nn":"P","c":[{"t":"lalalalala"},{"nn":"SPAN","a":[["class","footnote"]],"c":[{"t":"a footnote "},{"nn":"BR"}]},{"t":"dsdfdsfllasdsBerchtesgardener Lichtspiele. Flensburger Nahverkehr.qwedw casdsdwqqw"}]}]}]}')),
       objToNode(JSON.parse('{"nn":"DIV","a":[["id","document-editable"]],"c":[{"nn":"DIV","a":[["id","document-title"],["class","editable user-contents"],["title","The title of the document"],["contenteditable","true"]],"c":[{"t":"Hellofglalak"}]},{"nn":"DIV","a":[["id","document-metadata"],["class","user-contents"]]},{"nn":"DIV","a":[["id","document-contents"],["class","editable user-contents"],["contenteditable","true"]],"c":[{"nn":"P","c":[{"t":"I want a new Finisky is a German writer. Finish laundromats. French steel plants kate -- spiegel overrated. Howe"},{"t":"ver, the essential parts are good Danish roses. And Swedish steel. Bitcoin Claustrophobic Visions (BCC). Aftenposten regner, bicycle. It\'s really easy to do.  University finals are a discipline of their own. Bortsch ist something I would like to eat during winter. fellxDAGBBloneHONEZDzow. And so thdededeey went to M"},{"nn":"SPAN","a":[["class","comment"],["id","comment-0"],["data-id","0"],["data-user","1"],["data-user-name","johannes"],["data-user-avatar","/static/img/default_avatar.png"],["data-date","1388568971084"],["data-comment","test"]],"c":[{"t":"unichmel"}]},{"t":"lom "},{"nn":"SPAN","a":[["class","citation"],["data-bib-entry","1"],["data-bib-before",""],["data-bib-page","123"],["data-bib-format","autocite"]]},{"t":" jfllfrjc"},{"nn":"SPAN","a":[["class","equation"],["data-equation","\\frac{2}{3}"]]},{"t":" aftfellowen"},{"nn":"SPAN","a":[["class","equation"],["data-equation","x=2*y"]]},{"t":" deAftend"},{"nn":"SPAN","a":[["class","equation"],["data-equation","x=2*y"]]},{"t":" etigeren"}]},{"nn":"P","c":[{"t":"lalalalala"},{"nn":"SPAN","a":[["class","footnote"]],"c":[{"t":"a footnote "},{"nn":"BR"}]},{"t":"dsdfdsfllasdsBerchtesgardener Lichtspiele. Flensburger Nahverkehr.qwedw casdsdwqqw"}]}]}]}')),
     ]);
+
+    divs = divs.concat([
+      objToNode(JSON.parse('{"nn":"DIV","c":[{"nn":"B"},{"nn":"I"},{"nn":"I"},{"t":"1"}]}')),
+      objToNode(JSON.parse('{"nn":"DIV","c":[{"nn":"B"},{"nn":"I"},{"t":"1"},{"t":"2"}]}')),
+    ]);
+
 
 
     for (i = 0; i < divs.length; i = i + 2) {
