fix in gap diffing + use terms index1 and index2 for readability

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -574,6 +574,11 @@
       objToNode(JSON.parse('{"nn":"DIV","c":[{"nn":"B"},{"nn":"I"},{"t":"1"},{"t":"2"}]}')),
     ]);
 
+  /*  divs = [
+      objToNode(JSON.parse('{"nn":"DIV","a":[["data-id","gAt"]],"c":[{"nn":"P","a":[["data-test","3ttAmk"]],"c":[{"nn":"P","a":[["data-fisher","63"],["class","VmApr"]],"c":[{"nn":"SPAN","a":[["data-fisher","ZnGp7vp"],["class","BbS"],["data-id","ON3d"]]}]},{"nn":"IMG"},{"nn":"B"}]},{"nn":"B","a":[["data-fisher","c91"]],"c":[{"nn":"I","a":[["data-test","1"]]},{"nn":"B","a":[["data-fisher","L7IMPg6"]],"c":[{"nn":"I","a":[["data-fisher","57"],["data-test","4QjWEV"]],"c":[{"nn":"B","c":[{"nn":"IMG"},{"nn":"IMG"}]}]},{"nn":"P","a":[["data-id","SHGK"],["data-test","UyJ"]]},{"t":"f3YsY"}]}]},{"nn":"IMG"},{"nn":"SPAN","a":[["class","jD9"]]},{"nn":"SPAN","a":[["class","HpZ2KsY"],["data-id","WY"]]},{"t":""}]}')),
+      objToNode(JSON.parse('{"nn":"DIV","a":[["class","Pe0"],["data-fisher","LQ"]],"c":[{"nn":"P","a":[["data-fisher","KEkVN"]],"c":[{"nn":"I","a":[["data-id","0eS"],["data-fisher","YV"],["class","1y"]],"c":[{"nn":"B","a":[["data-fisher","lZR0Zbs"],["data-test","E"]],"c":[{"nn":"I","a":[["data-test","tS"],["data-id","HEY"]]}]}]},{"nn":"P","a":[["data-test","RhB"],["data-fisher","sALzSq0bZ"]],"c":[{"nn":"SPAN","c":[{"nn":"P","c":[{"nn":"SPAN","a":[["class","WbJLr1"],["data-id","xACUb"],["data-fisher","MlfVRw"]]}]},{"nn":"IMG"}]},{"nn":"IMG"}]},{"t":""}]},{"t":""},{"t":"j"}]}')),
+    ].concat(divs);
+*/
 
 
     for (i = 0; i < divs.length; i = i + 2) {
