add modify-value test by @matthewwolfe, fix value bug when value is an emoty string, increase version to 2.0.3, fixes #40

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@ This project is licensed under the LGPL v. 3. For details see <a href="LICENSE.t
 
 <p>There is also a <a href="tests/random-unlimited.html">version of the random tests that reloads if no errors have been found</a>, mainly useful for finding errors.</p>
 
+<p>The <a href="tests/modify-value.html">input value modification test</a>, contributed by user matthewwolfe, tests diffing changes to input fields.</p>
+
 <p>The <a href="tests/site-integration.html">site integration test</a>, contributed by user unbug, allows for testing for speed on a 170kb site real-world-like site where it is integrated with jQuery.</p>
 
 <h2>Demo</h2>
