add example from #47

--- a/tests/basic.html
+++ b/tests/basic.html
@@ -23,6 +23,9 @@
   <h1>Test for diffDOM</h1>
 
   <!-- Add all divs to be compared here two by two -->
+  <div><h1>Foo</h1><h2>Bar</h2><h3>Baz</h3></div>
+  <div><h1>Foo</h1><h2>Bar</h2></div>
+
   <div><p><b>Foo</b> Bar <b>Baz</b></p></div>
   <div><p><b>Foo</b> Car <b>Baz</b></p></div>
 
