Adding a test to cover the textarea issue

--- a/tests/form.html
+++ b/tests/form.html
@@ -199,6 +199,28 @@
       console.log(theDiff);
     }
 
+    reportDiv();
+
+    second.innerText = 'Some text';
+    third.innerText = 'Some other text';
+
+    reportDivDescription(first, second);
+
+    theDiff = dd.diff(first, second);
+
+    dd.apply(first, theDiff);
+
+    theDiff = dd.diff(first, third);
+
+    dd.apply(first, theDiff);
+
+    if (first.value === third.value) {
+      success(theDiff);
+    } else {
+      testFailure();
+      console.log(theDiff);
+    }
+
     // Input type = text
 
     setSection('Input type = text');
