--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ This project is licensed under the LGPL v. 3. For details see <a href="LICENSE.t
 
 <p>The <a href="tests/modify-value.html">input value modification test</a>, contributed by user matthewwolfe, tests diffing changes to input fields.</p>
 
+<p>The <a href="tests/long-list.html">long list test</a>, contributed by user vatavale, tests diffing changes to long lists with IDs.</p>
+
 <p>The <a href="tests/site-integration.html">site integration test</a>, contributed by user unbug, allows for testing for speed on a 170kb site real-world-like site where it is integrated with jQuery.</p>
 
 <h2>Demo</h2>
