only permit maxChildDiffCount when we are not in the top element, related to #67

--- a/tests/long-list.html
+++ b/tests/long-list.html
@@ -34,8 +34,7 @@
     var dd = new diffDOM({
         debug: true,
         diffcap: 1000,
-        valueDiffing: false,
-        maxChildCount: false
+        valueDiffing: false
       }),
       tl = new TraceLogger(dd), elements, first, second, third, fourth, theDiff;
 
