--- a/tests/long-list.html
+++ b/tests/long-list.html
@@ -15,10 +15,7 @@
       display: none;
     }
   </style>
-  <script src="TraceLogger.js">
-  </script>
-  <script src="../diffDOM.js">
-  </script>
+  <script src="../browser/index.js"></script>
 </head>
 
 <body>
@@ -31,12 +28,12 @@
 
 
 <script>
-    var dd = new diffDOM({
+    var dd = new diffDOM.DiffDOM({
         debug: true,
         diffcap: 1000,
         valueDiffing: false
       }),
-      tl = new TraceLogger(dd), elements, first, second, third, fourth, theDiff;
+      tl = new diffDOM.TraceLogger(dd), elements, first, second, third, fourth, theDiff;
 
     let divs = [].slice.call(document.querySelectorAll('div'))
 
