--- a/tests/site-integration.html
+++ b/tests/site-integration.html
@@ -4,8 +4,7 @@
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
   <meta charset="utf-8">
   <title>JS Bin</title>
-  <script src="../diffDOM.js">
-  </script>
+  <script src="../browser/index.js"></script>
   <style>
   .view-shoppingcart {
   width: 100%;
@@ -229,7 +228,7 @@
       if(diff && this._VDOM){
         this._VDOM = this[0].cloneNode();
         //console.log(this._VDOM);
-        this._VDD = this._VDD || new window.diffDOM({valueDiffing: false});
+        this._VDD = this._VDD || new window.DiffDOM.diffDOM({valueDiffing: false});
         this._VDOM.innerHTML = html;
         return applyDiff.call(this);
       }else{
