rename file for browser to diffDOM.js

--- a/tests/form.html
+++ b/tests/form.html
@@ -15,7 +15,7 @@
       display: none;
     }
   </style>
-  <script src="../browser/index.js"></script>
+  <script src="../browser/diffDOM.js"></script>
 </head>
 
 <body>
