--- a/tests/modify-value.html
+++ b/tests/modify-value.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<script src="../browser/index.js"></script>
+<script src="../browser/diffDOM.js"></script>
 </script>
 <script>
 'use strict';
