--- a/tests/list.html
+++ b/tests/list.html
@@ -15,7 +15,7 @@
       display: none;
     }
   </style>
-  <script src="../browser/index.js"></script>
+  <script src="../browser/diffDOM.js"></script>
 </head>
 
 <body>
