--- a/tests/random.html
+++ b/tests/random.html
@@ -12,7 +12,7 @@
       background-color: Tomato;
     }
   </style>
-  <script src="../browser/index.js"></script>
+  <script src="../browser/diffDOM.js"></script>
   <script>
     window.onload = function () {
 
