--- a/tests/site-integration.html
+++ b/tests/site-integration.html
@@ -4,7 +4,7 @@
 <script src="https://code.jquery.com/jquery-1.11.3.js"></script>
   <meta charset="utf-8">
   <title>JS Bin</title>
-  <script src="../browser/index.js"></script>
+  <script src="../browser/diffDOM.js"></script>
   <style>
   .view-shoppingcart {
   width: 100%;
