--- a/demo/index.html
+++ b/demo/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>diffDOM</title>
-  <script src="../browser/index.js">
+  <script src="../browser/diffDOM.js">
   </script>
   <style>
     .success {
