--- a/tests/basic.html
+++ b/tests/basic.html
@@ -554,7 +554,7 @@
       debug: true,
       diffcap: 500
     }),
-      tl = new diffDOM.TraceLogger(dd),
+      tl = new diffDOM.TraceLogger(dd.DiffFinder),
       divNodeList, divs = [],
       diffs, t1, i;
 
