--- a/tests/list.html
+++ b/tests/list.html
@@ -85,7 +85,7 @@
         diffcap: 700,
         valueDiffing: true
       }),
-      tl = new diffDOM.TraceLogger(dd), elements, first, second, third, fourth, theDiff;
+      tl = new diffDOM.TraceLogger(dd.DiffFinder), elements, first, second, third, fourth, theDiff;
 
     // Textarea
 
