--- a/tests/long-list.html
+++ b/tests/long-list.html
@@ -33,7 +33,7 @@
         diffcap: 1000,
         valueDiffing: false
       }),
-      tl = new diffDOM.TraceLogger(dd), elements, first, second, third, fourth, theDiff;
+      tl = new diffDOM.TraceLogger(dd.DiffFinder), elements, first, second, third, fourth, theDiff;
 
     let divs = [].slice.call(document.querySelectorAll('div'))
 
