--- a/tests/extent.html
+++ b/tests/extent.html
@@ -122,7 +122,7 @@
         debug: true,
         diffcap: 500
       }),
-      tl = new diffDOM.TraceLogger(dd),
+      tl = new diffDOM.TraceLogger(dd.DiffFinder),
       divNodeList, divs = [],
       diffs, t1, i;
 
