--- a/tests/form.html
+++ b/tests/form.html
@@ -113,7 +113,7 @@
         diffcap: 700,
         valueDiffing: true
       }),
-      tl = new diffDOM.TraceLogger(dd), elements, first, second, third, fourth, theDiff;
+      tl = new diffDOM.TraceLogger(dd.DiffFinder), elements, first, second, third, fourth, theDiff;
 
     // Textarea
 
