--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@ This project is licensed under the LGPL v. 3. For details see <a href="LICENSE.t
 
 <h2>Tests</h2>
 
-<p>There is a <a href="tests/random.html">test of random elements</a>, one of <a href="tests/basic.html">basic elements</a>, one that <a href="tests/extent.html">tests the extents of diffs</a> to help generate the least number of changes, and of <a href="tests/form.html">form elements</a> that tended to throw errors in previous versions of this library.</p>
+<p>Automatic tests are run using jest. There are also some browser based tests you can look at:</p>
 
-<p>There is also a <a href="tests/random-unlimited.html">version of the random tests that reloads if no errors have been found</a>, mainly useful for finding errors.</p>
+<p>There is a <a href="browserTests/random.html">test of random elements</a>.</p>
 
-<p>The <a href="tests/modify-value.html">input value modification test</a>, contributed by user matthewwolfe, tests diffing changes to input fields.</p>
+<p>There is also a <a href="browserTests/random-unlimited.html">version of the random tests that reloads if no errors have been found</a>, mainly useful for finding errors.</p>
 
-<p>The <a href="tests/long-list.html">long list test</a>, contributed by user vatavale, tests diffing changes to long lists with IDs.</p>
-
-<p>The <a href="tests/site-integration.html">site integration test</a>, contributed by user unbug, allows for testing for speed on a 170kb site real-world-like site where it is integrated with jQuery.</p>
+<p>The <a href="browserTests/site-integration.html">site integration test</a>, contributed by user unbug, allows for testing for speed on a 170kb site real-world-like site where it is integrated with jQuery.</p>
 
 <h2>Demo</h2>
 
